# e-commerce

./: .gitignore  comparison.md  package-lock.json  package.json
backend/: .env  Cargo.toml  build_rs_cov.profraw  products.db
backend/src/: main.rs  mock_data.rs  models.rs  tests.rs  validation.rs
frontend/: README.md  jest.config.js  package-lock.json  package.json
frontend/src/app/: App.tsx  page.tsx
frontend/src/app/admin-view/: page.tsx
frontend/src/app/components/: ProductCard.tsx  ProductCharts.tsx  ProductFilters.tsx  ProductForm.tsx  navbar.tsx
frontend/src/components/: FileManager.tsx  FileUpload.tsx  StatusIndicator.tsx
frontend/src/hooks/: useOffline.ts
frontend/src/services/: api.ts  fileService.ts  offlineService.ts  productService.ts  websocketService.ts
frontend/src/services/__tests__/: productService.test.ts
frontend/src/types/: index.ts  product.ts
