[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
actix-multipart = "0.6"
futures = "0.3"
tokio-tungstenite = "0.20"
actix-web-actors = "4.2"
actix = "0.13"
actix-rt = "2.9"
bytestring = "1.3"

[[bin]]
name = "backend"
path = "src/main.rs"
